# InfinityWallet

./: .gitignore  Cargo.toml  README.md  package-lock.json
app/src/: test1.js  test1.ts
app/src/RustClient/: Cargo.toml
app/src/RustClient/src/: instructions.rs  main.rs
programs/multisigwallet/: Cargo.toml
programs/multisigwallet/src/: lib.rs
programs/transaction/: Cargo.toml
programs/transaction/src/: lib.rs
tests/: MultiSigWallet.ts
