[package]
name = "RustClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
multisigwallet = { path = "../../../programs/multisigwallet", features = ["no-entrypoint"] }
transaction = { path = "../../../programs/transaction", features = ["no-entrypoint"] }